--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -17,6 +17,7 @@
 
             <Label
                 Text="Hello, World!"
+                x:Name="lblScreen"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
@@ -30,8 +31,7 @@
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
+                Text="Clear"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
 
